# md-sink

./: README.md  pyproject.toml
src/md_sink/: __main__.py  models.py  parser.py
