[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-sink"
version = "0.1.0"
description = "Kitchen sink for markdown files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[tool.pyright]
typeCheckingMode = "standard"
